Refactor Modules 01 & 02 to standardized hybrid pattern + Complete Module 04: Economy
## Standardization Refactor (Modules 01-02)

### Module 01: Identity - REFACTORED
- Converted database.ts from class-based to functional pattern
- Updated services (cardano, identity) to use default exports
- Refactored index.ts to hybrid pattern (exportable + standalone)
- Added tsconfig.json with composite, declaration, declarationMap
- Now importable: `import { identityService } from '@dream/identity'`
- Can run standalone: `pnpm dev` in packages/01-identity

### Module 02: Bridge Legacy - REFACTORED
- Converted database.ts to functional pattern with dual DB support
- Updated 3 services to default exports (feature-flag, data-migration, adapter)
- Refactored index.ts to hybrid pattern (exportable + standalone)
- Updated tsconfig.json with composite, declaration, declarationMap
- Updated bridge.routes.ts to use default imports
- Now importable: `import { featureFlagService } from '@dream/bridge-legacy'`
- Can run standalone: `pnpm dev` in packages/02-bridge-legacy

### Critical Fixes Applied
- Fixed migration file numbering conflicts (renumbered to 001-006)
- Standardized package naming to `@dream/*` across all modules
- Created migration runner script (`scripts/migrate.js`)
- Created rollback script (`scripts/rollback.js`)
- Created MODULE_STANDARDS.md documenting the hybrid pattern as THE STANDARD
- All 4 foundation modules (01-04) now follow identical pattern

## Module 04: Economy - COMPLETE

### Database Schema (6 Tables)
- token_ledger: Track balances for POLL, GRAT, Light Score
- token_transactions: Complete audit trail with dual-identity support
- token_locks: Staking/governance locks with unlock schedules
- light_scores: Reputation metric (0-100) managed by Pentos AI
- light_score_events: History of all Light Score changes
- token_supply: Track total supply, inflation, burn metrics

### Services (5 Files)
- ledger.service.ts: Balance queries, dual-identity support
- trans

--- a/packages/01-identity/tsconfig.json
+++ b/packages/01-identity/tsconfig.json
@@ -5,8 +5,7 @@
     "rootDir": "./src",
     "composite": true,
     "declaration": true,
-    "declarationMap": true,
-    "types": ["node", "vitest/globals"]
+    "declarationMap": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
