--- a/packages/04-economy/package.json
+++ b/packages/04-economy/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@dream/user",
+  "name": "@dream/economy",
   "version": "1.0.0",
-  "description": "Module 03: User profiles, settings, and account management for Dream Protocol",
+  "description": "Module 04: 4-Token Economy (PollCoin, Gratium, Light Score) for Dream Protocol",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -14,31 +14,25 @@
   },
   "keywords": [
     "dream-protocol",
-    "user",
-    "profile",
-    "settings",
-    "account-management"
+    "economy",
+    "tokens",
+    "pollcoin",
+    "gratium",
+    "light-score",
+    "blockchain"
   ],
   "author": "Dream Protocol Team",
   "license": "MIT",
   "dependencies": {
     "pg": "^8.11.3",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
     "dotenv": "^16.4.1",
-    "zod": "^3.22.4",
-    "sharp": "^0.33.2",
-    "aws-sdk": "^2.1540.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
     "@types/express": "^4.17.21",
-    "@types/multer": "^1.4.11",
     "@types/pg": "^8.11.0",
-    "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.5",
     "typescript": "^5.3.3",
     "tsx": "^4.7.0",
     "vitest": "^1.2.0",
