--- a/packages/04-economy/tsconfig.json
+++ b/packages/04-economy/tsconfig.json
@@ -5,8 +5,7 @@
     "rootDir": "./src",
     "composite": true,
     "declaration": true,
-    "declarationMap": true,
-    "types": ["node", "vitest/globals"]
+    "declarationMap": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
